# WeakPasswordDetectDemo

./: .gitignore  README.md  bruteforce.spec  build.bat  build.ps1  main.py  pyproject.toml
.monkeycode/: MEMORY.md
.monkeycode/docs/: web-ui-progress.md
.monkeycode/specs/weak-password-bruteforce-demo/: design.md  phase1-summary.md  requirements.md
.monkeycode/specs/web-api-implementation/: requirements.md
.monkeycode/specs/web-ui-implementation/: design.md
brute_force/: __init__.py  callback.py  cli.py  engine.py  enum_rules.py  process_manager.py  schemas.py  server.py  shared_state.py  thread_manager.py  ui_interface.py  utils.py  web_api.py  worker.py  ws_manager.py
brute_force/data/: weak_passwords.txt
brute_force/static/: index.html
tests/: test_engine.py  test_enum_rules.py  test_shared_state.py
