[project]
name = "weak-password-bruteforce"
version = "1.0.0"
description = "弱口令枚举暴力破解演示程序 (Python 3.13 free-threading)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.2.2",
    "pyinstaller>=6.20.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

# 注意：pydantic 已由 fastapi 自动引入，无需重复声明
# 如果遇到 pydantic-core 编译错误（rustc 版本不足），请：
# 1. 升级 Rust 到 1.88+ (rustup update stable)
# 2. 或使用 uv sync --no-build 仅使用预编译 wheel
